--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="almostWhite">#C5C5C5</color>
+
+    <color name="colorBorders">@color/colorAccent</color>
+    <color name="black">#000000</color>
 </resources>
