--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -16,7 +16,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/splash_logo"
+        android:textStyle="bold"
+        android:text="@string/app_name"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="40sp" />
 </LinearLayout>
