--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="colorPrimary">#795548</color>
     <color name="colorPrimaryDark">#5D4037</color>
-    <color name="colorPrimaryLight">#D7CCC8</color>
+    <color name="colorPrimaryLight">#C5BBB7</color>
     <color name="colorPrimaryWhite">#E7ECE8</color>
-    <color name="colorAccent">#FFC107</color>
+    <color name="colorAccent">#004D40</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#757575</color>
     <color name="icons">#FFFFFF</color>
