retry On error added for card reading operation. Closing tag in exception case - implemented. progress bar for read tag fragment implemented. Profile fragment background gradient changed. Translations added for error.

--- a/app/src/main/res/drawable/profile_gradient_background.xml
+++ b/app/src/main/res/drawable/profile_gradient_background.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/colorPrimaryDark"
+        android:startColor="@color/colorPrimary"
+        android:centerColor="@color/colorPrimaryLightest"
         android:endColor="@color/colorPrimaryLight"
-        android:angle="135">
+        android:centerY="20%"
+        android:angle="45">
     </gradient>
 </shape>
